fixed issues with mobile header image as well as mobile spacing more minor fixes to come

--- a/styles/main.css
+++ b/styles/main.css
@@ -834,7 +834,6 @@ footer{
     z-index: ;
     top: 7vh;
     margin: 0 auto;
-    margin-bottom: 15rem;
 }
 
 .firstRow{
@@ -1040,5 +1039,5 @@ footer{
 
 .space{
     width:100%;
-    height:20rem;
+    height:10rem;
 }
